--- a/sicongliu.html
+++ b/sicongliu.html
@@ -64,58 +64,58 @@
 -->
 <h3>个人简介 Biography</h3>
 	<p><b>刘思聪</b> 于2012年毕业于清华大学电子工程系本科获电子信息科学与技术学士学位，2017年获清华大学电子工程系信息与通信工程博士学位，
-		博士导师为宋健教授（IEEE会士）,并评为清华大学优秀博士毕业生。2010至2011年间赴香港城市大学电子工程学系交流访学。2017至2018年担任华为技术有限公司网络技术研究部高级工程师。
-		现任厦门大学信息学院特聘副研究员、助理教授、硕士生导师。</p>
+		博士导师为宋健教授, IEEE Fellow, 并评为清华大学优秀博士毕业生。2010至2011年间赴香港城市大学电子工程学系交流访学。2017至2018年担任华为技术有限公司网络技术研究部高级工程师。
+		现任厦门大学信息学院特聘副研究员、硕士生导师。</p>
 
-	<p>已发表50余篇期刊与会议学术论文，出版学术专著3部，获得8项发明专利授权，其中2项为国家标准必要专利。
-		担任宽带电力载波通信国家标准起草人。获评为福建省引进高层次人才（B类）。获中国电子学会自然科学二等奖（排名第3）、福建省科技进步三等奖（排名第3）、
-		清华大学优秀博士学位论文奖、清华大学电子系“学术新秀”称号。主持国家自然科学基金青年基金、福建省自然科学基金、厦门市青年创新基金等科研项目。
+	<p>已发表60余篇期刊与会议学术论文，出版学术专著5部，其中4部为第一作者，获得8项发明专利授权，其中2项为国家标准必要专利。
+		担任宽带电力载波通信国家标准起草人。获“福建省高层次人才”认定。获中国电子学会自然科学二等奖（排名第3）、福建省科技进步三等奖（排名第3）、
+		清华大学优秀博士学位论文奖、清华大学电子系“学术新秀”称号。获CCF-A类会议ACM UbiComp CPD WS 2021 优秀论文奖。主持国家自然科学基金青年基金、福建省自然科学基金、厦门市青年创新基金等科研项目。
 		参与国家重点研发计划、国家科技重大专项、福建省科技重大专项等科研项目。
 		担任国际智能电网信息通信大会IEEE SmartGridComm 2019大会Publication Chair、IEEE ISPLC 2021国际学术会议的TPC Chair, IEEE ICCC 2021大会Workshop Chair、IEEE ICC 2019大会Session Chair、IEEE ICCE 2019大会Track Chair，
-		以及包括IEEE ICC/Globecom在内的多个国际知名学术会议技术程序委员会委员。担任Frontiers in Communications and Networks 和 Future Internet Journal等国际学术期刊编委。
+		以及包括IEEE ICC/Globecom在内的多个国际知名学术会议技术程序委员会委员。担任Frontiers in Communications and Networks, Sensors Journal, Future Internet Journal等国际学术期刊编辑或客座编辑。
 		中国通信学会高级会员、IEEE会员、ACM会员、中国电子学会会员。</p>
 
-	<p>目前的研究兴趣为无线通信中的稀疏与智能方法，主要包括稀疏信号处理、压缩感知、机器学习等核心技术，及其在无线通信、可见光通信、无线安全和物联网等领域的关键应用。</p>
+	<p>目前的研究兴趣为可见光通信、通信感知一体化、压缩感知、基于人工智能的通信技术。</p>
 
 	<p><b>招收研究生、本科毕设学生和对科研感兴趣的同学，欢迎对相关方向感兴趣的同学联系</b>（可通过上述E-mail）</p>
 
 <p><b>Sicong Liu</b> received his B.S.E. in electronic engineering from Tsinghua University, Beijing, China in 2012.
-	He received his PhD degree in electronic engineering with highest honor in Tsinghua University in 2017, supervised by Prof. Jian Song (IEEE Fellow).
+	He received his PhD degree in electronic engineering with highest honor in Tsinghua University in 2017, supervised by Prof. Jian Song, IEEE Fellow.
 	From 2010 to 2011, he was a visiting student in Dept. Electronic and Communications Engineering, City University of Hong Kong.
 	He served as a Senior Engineer in the Networks Technology Research Department in Huawei Technologies, Co Ltd from 2017 to 2018.
-	Currently, he is a Specially Appointed Associate Researcher, an Assistant Professor, and a Master Supervisor in School of Informatics, Xiamen University.</p>
+	Currently, he is an Associate Researcher and a Master Supervisor in School of Informatics, Xiamen University.</p>
 			   
-<p>Sicong Liu has published over 50 journal and conference research papers.He has authored 3 monographs. He owns 8 Chinese invention patents, of which two are the necessary patents for
-	the national standards. He has contributed to the drafting of the Broadband Power Line Communications Standard in China. He is recognized as the Fujian High-Level Introduced Talents (Type B).
+<p>Sicong Liu has published over 60 journal and conference research papers.He has authored five monographs, of which four as first author. He owns 8 Chinese invention patents, of which two are the necessary patents for
+	the national standards. He has contributed to the drafting of the Broadband Power Line Communications Standard in China. He is recognized as the  High-Level Talents of Fujian Province.
 	He has won Second Prize in the Natural Science Award of Chinese Institute of Electronics (ranking 3), the Third Prize in the Scientific Progress Award of Fujian Province (ranking 3),
 	the Outstanding Doctoral Dissertation Award of Tsinghua University, and the EE Outstanding Academic Youth Award of Tsinghua University.
-	He has been acting as the principle investigator (PI) for the National Natural Science Foundation of China Youth Fund (NSFC), Natural Science Foundation of Fujian,
+	He has won the Best Paper Award of CCF Tier-A Conference ACM UbiComp CPD WS, 2021. He has been acting as the principle investigator (PI) for the National Natural Science Foundation of China Youth Fund (NSFC), Natural Science Foundation of Fujian,
 	and Youth Innovation Fund of Xiamen. He has participated in major projects including the State Key Research Project, the National Major Project of Science and Technology,
 	and the Major Project of Science and Technology of Fujian.
 	He served as a the publication chair in IEEE SmartGridComm 2019, TPC Chair of IEEE ISPLC 2021, Workshop Chair of IEEE ICCC 2021, Session Chair of IEEE ICC 2019, Track Chair of IEEE ICCE 2019,
 	and TPC member in many international academic conferences including IEEE ICC/Globecom, etc.
-	He serves in the Editorial Board of academic journals including Future Internet Journal and Frontiers in Communications and Networks.
+	He serves in the Editorial Board of academic journals including Future Internet Journal, Sensors Journal, and Frontiers in Communications and Networks.
 	He is a senior member of China Institute of Communications (CIC), and a member of IEEE, ACM, and China Institute of Electronics (CIE).</p>
-<p>His current research interests  lie in sparse and intelligent methods in wireless communications, mainly including key technologies of
-	sparse signal processing, compressed sensing, and machine learning, and related typical applications in wireless communications, visible light communications, wireless security, and internet of things.</p>
+<p>His current research interests  lie in visible light communication (VLC), integrated sensing and communication (ISAC), compressed sensing (CS), and AI-assisted communications.</p>
 	<p>Graduate and undergraduate students interested in related research fields are welcome to contact me via E-mail.</p>
 
 <h3>教育学术经历 Education and Academic Experiences</h3>
 	<p>2020年6月 - 至今 &nbsp;&nbsp; 厦门大学信息学院，<b>特聘副研究员</b></p>
-	<p>2018年3月 - 2020年6月 &nbsp;&nbsp; 厦门大学信息学院，<b>助理教授</b></p>
-	<p>2017年7月 - 2018年1月 &nbsp;&nbsp; 华为技术有限公司网络技术研究部，<b>高级工程师</b></p>
-	<p>2012年8月 - 2017年7月 &nbsp;&nbsp;清华大学电子工程系，攻读信息与通信工程<b>博士学位</b>，导师宋健教授</p>
+	<p>2018年1月 - 2020年6月 &nbsp;&nbsp; 厦门大学信息学院，<b>助理教授</b></p>
+	<p>2017年1月 - 2018年1月 &nbsp;&nbsp; 华为技术有限公司网络技术研究部，<b>高级工程师</b></p>
+	<p>2012年8月 - 2017年1月 &nbsp;&nbsp;清华大学电子工程系，攻读信息与通信工程<b>博士学位</b>，导师宋健教授</p>
 	<p>2010年8月 - 2011年1月 香港城市大学电子工程学系，交流访学</p>
 	<p>2008年8月 - 2012年7月 &nbsp;清华大学电子工程系，<b>本科</b></p>
 
-	<p>Jun. 2020 - Present &nbsp;&nbsp; <b>Specially Appointed Associate Researcher</b>, School of Informatics, Xiamen University</p>
-	<p>Mar. 2018 - Jun. 2020 &nbsp;&nbsp; <b>Assistant Professor</b>, School of Informatics, Xiamen University</p>
-	<p>Jul.2017-Jan. 2018 &nbsp;&nbsp; <b>Senior Engineer</b>, Research Dept. Network Technologies, Huawei Technologies Co. Ltd</p>
-	<p>Aug.2012-Jul.2017 &nbsp;&nbsp; <b>Ph.D.</b>, Department of Electronic Engineering, Tsinghua University, supervised by Prof. Jian Song</p>
+	<p>Jun. 2020 - Present &nbsp;&nbsp; <b>Associate Researcher</b>, School of Informatics, Xiamen University</p>
+	<p>Jan. 2018 - Jun. 2020 &nbsp;&nbsp; <b>Assistant Professor</b>, School of Informatics, Xiamen University</p>
+	<p>Jan.2017-Jan. 2018 &nbsp;&nbsp; <b>Senior Engineer</b>, Research Dept. Network Technologies, Huawei Technologies Co. Ltd</p>
+	<p>Aug.2012-Jan.2017 &nbsp;&nbsp; <b>Ph.D.</b>, Department of Electronic Engineering, Tsinghua University, supervised by Prof. Jian Song</p>
 	<p>Aug.2010-Jan.2011  Visiting Student, College of Science and Engineering, City University of Hong Kong, Hong Kong</p>
 	<p>Aug.2008-Jul.2012 &nbsp; <b>Bachelor</b>, Department of Electronic Engineering, Tsinghua University</p>
 
 <h3>荣誉奖励 Honors and Awards</h3>
+	<p>&bull; CCF-A类会议 ACM UbiComp CPD WS 优秀论文奖，2021 </p>
 	<p>&bull; 中国电子学会自然科学二等奖（排名第3），2019 </p>
 	<p>&bull; 福建省科技进步三等奖（排名第3），2019 </p>
 	<p>&bull; 福建省引进高层次人才（B类），2019 </p>
@@ -129,6 +129,7 @@
 	<p>&bull; 清华大学优秀研究生支持计划暨唐立新奖学金, 2015</p>
 	<p>&bull; 硕士研究生国家奖学金, 2014</p>
 	<p>&bull; 清华大学本科优良毕业生, 2012</p>
+	<p>&bull; Best Paper Award of CCF Tier-A Conference ACM UbiComp CPD WS, 2021 </p>
 	<p>&bull; Second Prize in the Natural Science Award of Chinese Institute of Electronics (ranking 3rd), 2019 </p>
 	<p>&bull; Third Prize of Fujian Science and Technology Progress Award (ranking 3rd), 2019 </p>
 	<p>&bull; Fujian High-Level Introduced Talents (Type B), 2019 </p>
@@ -163,6 +164,7 @@
 
 <h3>学术服务 Academia Services</h3>
 	<p>&bull; Associate Editor of Frontiers in Communications and Networks</p>
+	<p>&bull; Guest Editor of Sensors Journal</p>
 	<p>&bull; Guest Editor of Future Internet Journal</p>
 	<p>&bull; TPC Chair of IEEE International Symposium on Power Line Communications (ISPLC) 2021</p>
 	<p>&bull; Workshop Chair of IEEE International Conference on Communications in China (ICCC) 2021</p>
@@ -174,7 +176,7 @@
 <h3>教学工作 Teaching</h3>
 	<p>&bull; CST304: Digital Signal Processing, Undergraduates, Fall 2018/2019, Xiamen University Malaysia (English)</p>
 	<p>&bull; CST103: Programming Language (C), Undergraduates, Fall 2018/2019, Xiamen University Malaysia (English)</p>
-	<p>&bull; 高频电子线路(II), 本科生, 2018/2019学年春季学期、2019/2020学年春季学期，厦门大学</p>
+	<p>&bull; 通信电路原理, 本科生, 2018/2019学年春季学期、2019/2020学年春季学期，厦门大学</p>
 	<p>&bull; 无线通信原理, 本科生, 2019/2020学年春季学期, 厦门大学</p>
 	<p>&bull; 数字信号处理实验, 本科生, 2019/2020学年秋季学期、2020/2021学年秋季学期，厦门大学</p>
 
@@ -189,22 +191,39 @@
 
 	<p>&bull; 杨昉，<b>刘思聪</b>，高镇，“5G移动通信空口新技术”，北京：电子工业出版社，2020年7月</p>
 	<p> &nbsp; &nbsp; F. Yang, <b>S. Liu</b>, Z. Gao, "New Air Interface Technologies for 5G Mobile Communications," <i>Beijing: Publishing House of Electronics Industry</i>, July 2020, ISBN: 978-7-121-39193-4.</p>
+
+	<p>&bull; <b>刘思聪</b>，肖亮，“无线通信与安全”，北京：清华大学出版社，2021年4月</p>
+	<p> &nbsp; &nbsp; <b>S. Liu</b>, L. Xiao, "Wireless Communications and Security," <i>Beijing: Tsinghua University Press</i>, Apr. 2021, ISBN: 978-7-302-57684-6.</p>
+
+
 	<p>
 		<img src="images/book_springer_research_on_key_tech.bmp" width = 120/> <img src="images/book_phei.jpg" width = 140/> <img src="images/book_5G.jpg" width = 120/>
+		<img src="images/book_wireless_security.jpg" width = 120/>
 	</p>
 
 <br>
 <p><strong>期刊论文 Journals</strong></p>
+<p>&bull; <b>S. Liu*</b> and X. Huang, "Sparsity-aware channel estimation for mmWave massive MIMO: A deep CNN-based approach," <i>China Communications</i>,  vol. 18, no. 6, pp. 162-171, Jun. 2021.
+		[<a target="blank" href="https://ieeexplore.ieee.org/document/9459572">Abstract</a>][<a target="blank"  href="papers/CNCOM21liu.pdf">PDF</a>][<a target="blank"  href="papers/CNCOM21liu.txt">bibtex</a>]</p>
+
+	<p>&bull;C. Lu, Z. Wang, W. Ding, G. Li, <b>S. Liu</b> and L. Cheng,  "MARVEL: Multi-agent reinforcement learning for VANET delay minimization," <i>China Communications</i>,  vol. 18, no. 6, pp. 1-11, June 2021.
+	[<a target="blank" href="https://ieeexplore.ieee.org/document/9459560">Abstract</a>][<a target="blank"  href="papers/CNCOM21lu.pdf">PDF</a>][<a target="blank"  href="papers/CNCOM21lu.txt">bibtex</a>]</p>
+
+
+	<p>&bull; L. Xiao, Y. Ding, J. Huang, <b>S. Liu*</b>, Y. Tang and H. Dai, "UAV Anti-Jamming Video Transmissions With QoE Guarantee: A Reinforcement Learning-Based Approach," <i>IEEE Transactions on Communications</i>, vol. 69, no. 9, pp. 5933-5947, Sept. 2021.
+		[<a target="blank" href="https://ieeexplore.ieee.org/document/9449830">Abstract</a>][<a target="blank"  href="papers/TCOM21xiao.pdf">PDF</a>][<a target="blank"  href="papers/TCOM21xiao.txt">bibtex</a>]</p>
+
+
 <p>&bull; Y. Xiao, G. Niu, L. Xiao, Y. Ding, <b>S. Liu</b> and Y. Fan, "Reinforcement learning based energy-efficient internet-of-things video transmission," <i>Intelligent and Converged Networks</i>,  vol. 1, no. 3, pp. 258-270, Dec. 2020.
 	[<a target="blank" href="https://ieeexplore.ieee.org/document/9314164">Abstract</a>][<a target="blank"  href="papers/ICN20xiao.pdf">PDF</a>][<a target="blank"  href="papers/ICN20xiao.txt">bibtex</a>]</p>
 
 <p>&bull; L. Xiao, H. Zhang, Y. Xiao, X. Wan, <b>S. Liu</b>, L.-C. Wang, and H. V. Poor, "Reinforcement Learning-Based Downlink Interference Control for Ultra-Dense Small Cells," <i>IEEE Transactions on Wireless Communications</i>, vol. 19, no. 1, pp. 423-434, Jan. 2020.[<a target="blank" href="https://ieeexplore.ieee.org/document/8868117">Abstract</a>][<a target="blank"  href="papers/TWC19.pdf">PDF</a>][<a target="blank"  href="papers/TWC19.txt">bibtex</a>]</p>
 
-	<p>&bull; <b>S. Liu</b>*, L. Xiao, Z. Han and Y. Tang, "Eliminating NB-IoT Interference to LTE System: a Sparse Machine Learning Based Approach," <i>IEEE Internet of Things Journal</i>, vol. 6, no. 4, pp. 6919-6932, Aug. 2019.[<a target="blank" href="https://ieeexplore.ieee.org/document/8695828">Abstract</a>][<a target="blank" href="papers/JIoT.pdf">PDF</a>][<a target="blank" href="papers/JIoT.txt">bibtex</a>]</p>
+	<p>&bull; <b>S. Liu*</b>, L. Xiao, Z. Han and Y. Tang, "Eliminating NB-IoT Interference to LTE System: a Sparse Machine Learning Based Approach," <i>IEEE Internet of Things Journal</i>, vol. 6, no. 4, pp. 6919-6932, Aug. 2019.[<a target="blank" href="https://ieeexplore.ieee.org/document/8695828">Abstract</a>][<a target="blank" href="papers/JIoT.pdf">PDF</a>][<a target="blank" href="papers/JIoT.txt">bibtex</a>]</p>
 
-<p>&bull; L. Xiao, G. Sheng, <b>S. Liu</b>*, H. Dai, M. Peng and J. Song, "Deep Reinforcement Learning Enabled Secure Visible Light Communication against Eavesdropping," <i>IEEE Transactions on Communications</i>, vol. 67, no. 10, pp. 6994-7005, Oct. 2019.[<a target="blank" href="https://ieeexplore.ieee.org/document/8768346">Abstract</a>][<a target="blank"  href="papers/TCOM19.pdf">PDF</a>][<a target="blank"  href="papers/TCOM19.txt">bibtex</a>]</p>
+<p>&bull; L. Xiao, G. Sheng, <b>S. Liu*</b>, H. Dai, M. Peng and J. Song, "Deep Reinforcement Learning Enabled Secure Visible Light Communication against Eavesdropping," <i>IEEE Transactions on Communications</i>, vol. 67, no. 10, pp. 6994-7005, Oct. 2019.[<a target="blank" href="https://ieeexplore.ieee.org/document/8768346">Abstract</a>][<a target="blank"  href="papers/TCOM19.pdf">PDF</a>][<a target="blank"  href="papers/TCOM19.txt">bibtex</a>]</p>
 
-<p>&bull; <b>S. Liu</b>*, L. Xiao, L. Huang and X. Wang, "Impulsive Noise Recovery and Elimination: A Sparse Machine Learning Based Approach," <i>IEEE Transactions on Vehicular Technology</i>, vol. 68, no. 3, pp. 2306-2315, March 2019.[<a target="blank" href="https://ieeexplore.ieee.org/document/8606256">Abstract</a>][<a target="blank"  href="papers/TVT19.pdf">PDF</a>][<a target="blank"  href="papers/TVT19.txt">bibtex</a>]</p>
+<p>&bull; <b>S. Liu*</b>, L. Xiao, L. Huang and X. Wang, "Impulsive Noise Recovery and Elimination: A Sparse Machine Learning Based Approach," <i>IEEE Transactions on Vehicular Technology</i>, vol. 68, no. 3, pp. 2306-2315, March 2019.[<a target="blank" href="https://ieeexplore.ieee.org/document/8606256">Abstract</a>][<a target="blank"  href="papers/TVT19.pdf">PDF</a>][<a target="blank"  href="papers/TVT19.txt">bibtex</a>]</p>
 
 	<p>&bull; Z. An, <b>S. Liu</b>*, "Towards Diverse Paraphrase Generation Using Multi-Class Wasserstein GAN," <i>arXiv:1909.13827</i>, Sep. 2019.
 		[<a target="blank" href="https://arxiv.org/abs/1909.13827">Abstract</a>][<a target="blank"  href="papers/PG_MC_WGAN19.pdf">PDF</a>][<a target="blank"  href="papers/PG_MC_WGAN19.txt">bibtex</a>]</p>
@@ -275,6 +294,21 @@
 
 <br>
 <p><strong>会议论文 Conferences</strong></p>
+	<p>&bull; T. Wei, D. Su and <b>S. Liu</b>*, "Generative Adversarial Network Enabled Sparse Signal Compression and Recovery for Internet of Medical Things," <i>ACM UbiComp'21</i>, pp. 678–683, Sept 2021.
+		[<a target="blank" href="https://dl.acm.org/doi/abs/10.1145/3460418.3480404">Abstract</a>][<a target="blank"  href="papers/UbiComp21wei.pdf">PDF</a>][<a target="blank"  href="papers/UbiComp21wei.txt">bibtex</a>]</p>
+
+	<p>&bull; D. Su, X. Liu and <b>S. Liu</b>*, "Three-Dimensional Indoor Visible Light Localization: A Learning-Based Approach," <i>ACM UbiComp'21</i>, pp. 672–677, Sept 2021.
+		[<a target="blank" href="https://dl.acm.org/doi/abs/10.1145/3460418.3480406">Abstract</a>][<a target="blank"  href="papers/UbiComp21su.pdf">PDF</a>][<a target="blank"  href="papers/UbiComp21su.txt">bibtex</a>]</p>
+
+	<p>&bull; <b>S. Liu</b>*, L. Gao, and D. Su, "Deep Learning Based Underwater Acoustic Channel Estimation Exploiting Physical Knowledge on Channel Sparsity," <i>ACM UbiComp'21</i>, pp. 655–659, Sept 2021.
+		[<a target="blank" href="https://dl.acm.org/doi/abs/10.1145/3460418.3480401">Abstract</a>][<a target="blank"  href="papers/UbiComp21gao.pdf">PDF</a>][<a target="blank"  href="papers/UbiComp21gao.txt">bibtex</a>]</p>
+
+	<p>&bull; L. Gao and <b>S. Liu</b>*, "Underwater Acoustic Channel Estimation Based on Sparsity-Aware Deep Neural Networks," <i>2021 OES China Ocean Acoustics (COA)</i>, pp. 544-549, June 2021.
+		[<a target="blank" href="https://ieeexplore.ieee.org/document/9519876">Abstract</a>][<a target="blank"  href="papers/COA21gao.pdf">PDF</a>][<a target="blank"  href="papers/COA21gao.txt">bibtex</a>]</p>
+
+	<p>&bull; T. Wei and <b>S. Liu</b>*, "Sparse Learning Based Implantable Medical Device Transmission against Eavesdropping," <i>2021 15th International Symposium on Medical Information and Communication Technology (ISMICT)</i>, pp. 70-75, May 2021.
+		[<a target="blank" href="https://ieeexplore.ieee.org/document/9434905">Abstract</a>][<a target="blank"  href="papers/ISMICT21wei.pdf">PDF</a>][<a target="blank"  href="papers/ISMICT21wei.txt">bibtex</a>]</p>
+
 
 	<p>&bull; X. Huang, <b>S. Liu</b>*, "Massive MIMO Channel Estimation for Vehicular Communications: A Deep Learning Based Approach,” <i>2020 IEEE International Conference on Communications (ICC) Workshops</i>, Dublin, Ireland, June 2020.
 		[<a target="blank" href="https://ieeexplore.ieee.org/document/9145126">Abstract</a>][<a target="blank"  href="papers/ICC20huang.pdf">PDF</a>][<a target="blank"  href="papers/ICC20huang.txt">bibtex</a>]</p>
@@ -324,7 +358,9 @@
 
 
 <h3>发明专利 Innovation Patents</h3>
-<p>&bull; <b>刘思聪</b>，黄潇；一种基于深度卷积神经网络的大规模多天线信道估计方法；中国发明专利，202010413758.3；已公开。</p>
+<p>&bull; <b>刘思聪</b>，高龙杰；一种基于深度学习的稀疏水声信道估计方法；中国发明专利，202011361757.5；已授权。</p>
+
+<p>&bull; <b>刘思聪</b>，黄潇；一种基于深度卷积神经网络的大规模多天线信道估计方法；中国发明专利，202010413758.3；已授权。</p>
 
 <p>&bull; 杨昉，高俊男，<b>刘思聪</b>，宋健，陆建华；冲激噪声消除方法及装置；中国发明专利，201510201105.8；已授权。</p>
 
@@ -355,7 +391,7 @@
 		<span id="busuanzi_container_site_uv" >| tus <span id="busuanzi_value_site_uv"></span> </span>
 		<br>
 
-		Last updatd Jan. 2021 | copyright &copy; <b>Sicong Liu</b>.
+		Last updatd Jan. 2022 | copyright &copy; <b>Sicong Liu</b>.
 	</div>
 </div>
 
