--- a/sicongliu.html
+++ b/sicongliu.html
@@ -131,9 +131,10 @@
 	<p>&bull; 硕士研究生国家奖学金, 2014</p>
 	<p>&bull; 清华大学本科优良毕业生, 2012</p>
 	<p>&bull; Best Paper Award of CCF Tier-A Conference ACM UbiComp CPD WS (Corresponding Author), 2021 </p>
+	<p>&bull; High-Level Talents of Fujian Province, 2021 </p>
 	<p>&bull; Second Prize in the Natural Science Award of Chinese Institute of Electronics (ranking 3rd), 2019 </p>
 	<p>&bull; Third Prize of Fujian Science and Technology Progress Award (ranking 3rd), 2019 </p>
-	<p>&bull; Fujian High-Level Introduced Talents (Type B), 2019 </p>
+	<p>&bull; High-Level Introduced Talents of Fujian Province, 2019 </p>
 	<p>&bull; Best Paper Award of Xiamen Institute of Communications（First Prize, Corresponding Author），2019 </p>
 	<p>&bull; Outstanding Doctoral Dissertation Award of Tsinghua University, 2017 </p>
 	<p>&bull; Outstanding PhD Graduate Award of Tsinghua University, 2017 </p>
@@ -164,9 +165,9 @@
 
 
 <h3>学术服务 Academia Services</h3>
-	<p>&bull; Associate Editor of Frontiers in Communications and Networks</p>
-	<p>&bull; Guest Editor of Sensors Journal</p>
-	<p>&bull; Guest Editor of Future Internet Journal</p>
+	<p>&bull; Associate Editor of Frontiers in Communications and Networks, since 2020</p>
+	<p>&bull; Guest Editor of Sensors Journal, 2021-2022</p>
+	<p>&bull; Guest Editor of Future Internet Journal, 2017-2018</p>
 	<p>&bull; TPC Chair of IEEE International Symposium on Power Line Communications (ISPLC) 2021</p>
 	<p>&bull; Workshop Chair of IEEE International Conference on Communications in China (ICCC) 2021</p>
 	<p>&bull; Publication Chair of IEEE SmartGridComm 2019</p>
@@ -302,7 +303,7 @@
 		[<a target="blank" href="https://dl.acm.org/doi/abs/10.1145/3460418.3480406">Abstract</a>][<a target="blank"  href="papers/UbiComp21su.pdf">PDF</a>][<a target="blank"  href="papers/UbiComp21su.txt">bibtex</a>]</p>
 
 	<p>&bull; <b>S. Liu</b>*, L. Gao, and D. Su, "Deep Learning Based Underwater Acoustic Channel Estimation Exploiting Physical Knowledge on Channel Sparsity," <i>ACM UbiComp'21</i>, pp. 655–659, Sept 2021.
-		[<a target="blank" href="https://dl.acm.org/doi/abs/10.1145/3460418.3480401">Abstract</a>][<a target="blank"  href="papers/UbiComp21gao.pdf">PDF</a>][<a target="blank"  href="papers/UbiComp21gao.txt">bibtex</a>]</p>
+		[<a target="blank" href="https://dl.acm.org/doi/abs/10.1145/3460418.3480401">Abstract</a>][<a target="blank"  href="papers/Ubicomp21gao.pdf">PDF</a>][<a target="blank"  href="papers/Ubicomp21gao.txt">bibtex</a>]</p>
 
 	<p>&bull; L. Gao and <b>S. Liu</b>*, "Underwater Acoustic Channel Estimation Based on Sparsity-Aware Deep Neural Networks," <i>2021 OES China Ocean Acoustics (COA)</i>, pp. 544-549, June 2021.
 		[<a target="blank" href="https://ieeexplore.ieee.org/document/9519876">Abstract</a>][<a target="blank"  href="papers/COA21gao.pdf">PDF</a>][<a target="blank"  href="papers/COA21gao.txt">bibtex</a>]</p>
