--- a/sicongliu.html
+++ b/sicongliu.html
@@ -40,8 +40,8 @@
 						
 					</div>
 					<h2>Dr. Sicong Liu 刘思聪</h2>
-					<p>厦门大学信息学院 特聘副研究员, 清华大学电子工程系 博士</p>
-					<p>Associate Researcher, School of Informatics, Xiamen University</p>
+					<p>厦门大学信息学院 副教授, 清华大学电子工程系 博士</p>
+					<p>Associate Professor, School of Informatics, Xiamen University</p>
 					<p>PhD, Electronic Engineering, Tsinghua University</p>
 					<p>地址：福建省厦门市思明区厦门大学海韵园，邮编：361005</p>
 					<p>Address: Haiyun Campus, Xiamen University, Xiamen 361005, China P.R.</p>
@@ -65,7 +65,7 @@
 <h3>个人简介 Biography</h3>
 	<p><b>刘思聪</b> 于2012年毕业于清华大学电子工程系本科获电子信息科学与技术学士学位，2017年获清华大学电子工程系信息与通信工程博士学位，
 		博士导师为宋健教授, IEEE Fellow, 并评为清华大学优秀博士毕业生。2010至2011年间赴香港城市大学电子工程学系交流访学。2017至2018年担任华为技术有限公司网络技术研究部高级工程师。
-		现任厦门大学信息学院特聘副研究员、硕士生导师。</p>
+		2018年起任厦门大学信息学院助理教授。现任厦门大学信息学院副教授、硕士生导师。</p>
 
 	<p>已发表60余篇期刊与会议学术论文，出版学术专著5部，其中4部为第一作者，获得8项发明专利授权，其中2项为国家标准必要专利。
 		担任宽带电力载波通信国家标准起草人。获“福建省高层次人才”认定。获中国电子学会自然科学二等奖（排名第3）、福建省科技进步三等奖（排名第3）、
@@ -83,7 +83,7 @@
 	He received his PhD degree in electronic engineering with highest honor in Tsinghua University in 2017, supervised by Prof. Jian Song, IEEE Fellow.
 	From 2010 to 2011, he was a visiting student in Dept. Electronic and Communications Engineering, City University of Hong Kong.
 	He served as a Senior Engineer in the Networks Technology Research Department in Huawei Technologies, Co Ltd from 2017 to 2018.
-	Currently, he is an Associate Researcher and a Master Supervisor in School of Informatics, Xiamen University.</p>
+	He joined Xiamen University as an Assistant Professor in 2018. Currently, he is an Associate Professor and a Master Supervisor in School of Informatics, Xiamen University.</p>
 			   
 <p>Sicong Liu has published over 60 journal and conference research papers.He has authored five monographs, of which four as first author. He owns 8 Chinese invention patents, of which two are the necessary patents for
 	the national standards. He has contributed to the drafting of the Broadband Power Line Communications Standard in China. He is recognized as the  High-Level Talents of Fujian Province.
@@ -100,15 +100,15 @@
 	<p>Graduate and undergraduate students interested in related research fields are welcome to contact me via E-mail.</p>
 
 <h3>教育学术经历 Education and Academic Experiences</h3>
-	<p>2020年6月 - 至今 &nbsp;&nbsp; 厦门大学信息学院，<b>特聘副研究员</b></p>
-	<p>2018年1月 - 2020年6月 &nbsp;&nbsp; 厦门大学信息学院，<b>助理教授</b></p>
+	<p>2022年2月 - 至今 &nbsp;&nbsp; 厦门大学信息学院，<b>副教授</b></p>
+	<p>2018年1月 - 2022年1月 &nbsp;&nbsp; 厦门大学信息学院，<b>助理教授</b></p>
 	<p>2017年1月 - 2018年1月 &nbsp;&nbsp; 华为技术有限公司网络技术研究部，<b>高级工程师</b></p>
 	<p>2012年8月 - 2017年1月 &nbsp;&nbsp;清华大学电子工程系，攻读信息与通信工程<b>博士学位</b>，导师宋健教授</p>
 	<p>2010年8月 - 2011年1月 香港城市大学电子工程学系，交流访学</p>
 	<p>2008年8月 - 2012年7月 &nbsp;清华大学电子工程系，<b>本科</b></p>
 
-	<p>Jun. 2020 - Present &nbsp;&nbsp; <b>Associate Researcher</b>, School of Informatics, Xiamen University</p>
-	<p>Jan. 2018 - Jun. 2020 &nbsp;&nbsp; <b>Assistant Professor</b>, School of Informatics, Xiamen University</p>
+	<p>Feb. 2022 - Present &nbsp;&nbsp; <b>Associate Professor</b>, School of Informatics, Xiamen University</p>
+	<p>Jan. 2018 - Jan. 2022 &nbsp;&nbsp; <b>Assistant Professor</b>, School of Informatics, Xiamen University</p>
 	<p>Jan.2017-Jan. 2018 &nbsp;&nbsp; <b>Senior Engineer</b>, Research Dept. Network Technologies, Huawei Technologies Co. Ltd</p>
 	<p>Aug.2012-Jan.2017 &nbsp;&nbsp; <b>Ph.D.</b>, Department of Electronic Engineering, Tsinghua University, supervised by Prof. Jian Song</p>
 	<p>Aug.2010-Jan.2011  Visiting Student, College of Science and Engineering, City University of Hong Kong, Hong Kong</p>
