--- a/sicongliu.html
+++ b/sicongliu.html
@@ -69,9 +69,10 @@
 
 	<p>已发表60余篇期刊与会议学术论文，出版学术专著5部，其中4部为第一作者，获得8项发明专利授权，其中2项为国家标准必要专利。
 		担任宽带电力载波通信国家标准起草人。获“福建省高层次人才”认定。获中国电子学会自然科学二等奖（排名第3）、福建省科技进步三等奖（排名第3）、
-		清华大学优秀博士学位论文奖、清华大学电子系“学术新秀”称号。获CCF-A类会议ACM UbiComp CPD WS 2021 优秀论文奖（通讯作者）。主持国家自然科学基金青年基金、福建省自然科学基金、厦门市青年创新基金等科研项目。
-		参与国家重点研发计划、国家科技重大专项、福建省科技重大专项等科研项目。
-		担任国际智能电网信息通信大会IEEE SmartGridComm 2019大会Publication Chair、IEEE ISPLC 2021国际学术会议的TPC Chair, IEEE ICCC 2021大会Workshop Chair、IEEE ICC 2019大会Session Chair、IEEE ICCE 2019大会Track Chair，
+		清华大学优秀博士学位论文奖、清华大学电子系“学术新秀”称号。获CCF-A类会议ACM UbiComp CPD WS 2021 优秀论文奖（通讯作者）。主持国家自然科学基金、福建省自然科学基金、厦门市青年创新基金等科研项目。
+		参与国家重点研发计划、国家科技重大专项、福建省科技重大专项等科研项目。以第一作者主编一部学科专业教材入选教育部高等学校电子信息类专业教学指导委员会规划教材、高等学校电子信息类专业系列教材。主讲一门本科生课程入选“福建省一流本科课程”。</p>
+
+	<p> 担任国际智能电网信息通信大会IEEE SmartGridComm 2019大会Publication Chair、IEEE ISPLC 2021国际学术会议的TPC Chair, IEEE ICCC 2021大会Workshop Chair、IEEE ICC 2019大会Session Chair、IEEE ICCE 2019大会Track Chair，
 		以及包括IEEE ICC/Globecom在内的多个国际知名学术会议技术程序委员会委员。担任Frontiers in Communications and Networks, Sensors Journal, Future Internet Journal等国际学术期刊编辑或客座编辑。
 		中国通信学会高级会员、IEEE会员、ACM会员、中国电子学会会员。</p>
 
@@ -89,10 +90,12 @@
 	the national standards. He has contributed to the drafting of the Broadband Power Line Communications Standard in China. He is recognized as the  High-Level Talents of Fujian Province.
 	He has won Second Prize in the Natural Science Award of Chinese Institute of Electronics (ranking 3), the Third Prize in the Scientific Progress Award of Fujian Province (ranking 3),
 	the Outstanding Doctoral Dissertation Award of Tsinghua University, and the EE Outstanding Academic Youth Award of Tsinghua University.
-	He has won the Best Paper Award of CCF Tier-A Conference ACM UbiComp CPD WS, 2021, as corresponding author. He has been acting as the principle investigator (PI) for the National Natural Science Foundation of China Youth Fund (NSFC), Natural Science Foundation of Fujian,
+	He has won the Best Paper Award of CCF Tier-A Conference ACM UbiComp CPD WS, 2021, as corresponding author. He has been acting as the principle investigator (PI) for the National Natural Science Foundation of China (NSFC), Natural Science Foundation of Fujian,
 	and Youth Innovation Fund of Xiamen. He has participated in major projects including the State Key Research Project, the National Major Project of Science and Technology,
-	and the Major Project of Science and Technology of Fujian.
-	He served as a the publication chair in IEEE SmartGridComm 2019, TPC Chair of IEEE ISPLC 2021, Workshop Chair of IEEE ICCC 2021, Session Chair of IEEE ICC 2019, Track Chair of IEEE ICCE 2019,
+	and the Major Project of Science and Technology of Fujian. He is the first author of a major textbook, which is included in the Textbook Project of the Higher Education Electronic Information Teaching Steering Committee, Department of Education of China.
+    He has taught a course for undergraduates, which is included in the Outstanding Undergraduate Courses of Fujian Province. </p>
+
+<p>	He served as a the publication chair in IEEE SmartGridComm 2019, TPC Chair of IEEE ISPLC 2021, Workshop Chair of IEEE ICCC 2021, Session Chair of IEEE ICC 2019, Track Chair of IEEE ICCE 2019,
 	and TPC member in many international academic conferences including IEEE ICC/Globecom, etc.
 	He serves in the Editorial Board of academic journals including Future Internet Journal, Sensors Journal, and Frontiers in Communications and Networks.
 	He is a senior member of China Institute of Communications (CIC), and a member of IEEE, ACM, and China Institute of Electronics (CIE).</p>
@@ -117,6 +120,7 @@
 <h3>荣誉奖励 Honors and Awards</h3>
 	<p>&bull; CCF-A类会议 ACM UbiComp CPD WS 优秀论文奖（通讯作者)，2021 </p>
 	<p>&bull; 福建省高层次人才，2021 </p>
+	<p>&bull; 福建省一流本科课程（课程主讲），2021 </p>
 	<p>&bull; 中国电子学会自然科学二等奖（排名第3），2019 </p>
 	<p>&bull; 福建省科技进步三等奖（排名第3），2019 </p>
 	<p>&bull; 福建省引进高层次人才，2019 </p>
@@ -194,7 +198,7 @@
 	<p>&bull; 杨昉，<b>刘思聪</b>，高镇，“5G移动通信空口新技术”，北京：电子工业出版社，2020年7月</p>
 	<p> &nbsp; &nbsp; F. Yang, <b>S. Liu</b>, Z. Gao, "New Air Interface Technologies for 5G Mobile Communications," <i>Beijing: Publishing House of Electronics Industry</i>, July 2020, ISBN: 978-7-121-39193-4.</p>
 
-	<p>&bull; <b>刘思聪</b>，肖亮，“无线通信与安全”，北京：清华大学出版社，2021年4月</p>
+	<p>&bull; <b>刘思聪</b>，肖亮，“无线通信与安全”，北京：清华大学出版社，2021年4月 （教育部高等学校电子信息类专业教学指导委员会规划教材、高等学校电子信息类专业系列教材）</p>
 	<p> &nbsp; &nbsp; <b>S. Liu</b>, L. Xiao, "Wireless Communications and Security," <i>Beijing: Tsinghua University Press</i>, Apr. 2021, ISBN: 978-7-302-57684-6.</p>
 
 
