--- a/sicongliu.html
+++ b/sicongliu.html
@@ -47,7 +47,7 @@
 					<p>Address: Haiyun Campus, Xiamen University, Xiamen 361005, China P.R.</p>
 					<p>E-mail: 1) liusc (at) xmu.edu.cn  2) liusc1028 (at) gmail.com</p>
 					<p><a target="blank" href="https://scholar.google.com/citations?user=FjTr1C8AAAAJ&hl=zh-TW">谷歌学术个人主页 Google Scholar</a>
-					&nbsp; &nbsp; <a target="blank" href="https://informatics.xmu.edu.cn/info/1019/18223.htm">厦门大学个人主页 Xiamen University</a></p>
+					&nbsp; &nbsp; <a target="blank" href="https://informatics.xmu.edu.cn/info/1019/18398.htm">厦门大学个人主页 Xiamen University</a></p>
 									<br><br>
 				</div>
 			</div>
@@ -74,7 +74,7 @@
 
 	<p> 担任国际智能电网信息通信大会IEEE SmartGridComm 2019大会Publication Chair、IEEE ISPLC 2021国际学术会议的TPC Chair, IEEE ICCC 2021大会Workshop Chair、IEEE ICC 2019大会Session Chair、IEEE ICCE 2019大会Track Chair，
 		以及包括IEEE ICC/Globecom在内的多个国际知名学术会议技术程序委员会委员。担任Frontiers in Communications and Networks, Sensors Journal, Future Internet Journal等国际学术期刊编辑或客座编辑。
-		中国通信学会高级会员、IEEE会员、ACM会员、中国电子学会会员。</p>
+		IEEE高级会员、中国通信学会高级会员、ACM会员、中国电子学会会员。</p>
 
 	<p>目前的研究兴趣为可见光通信、通信感知一体化、压缩感知、基于人工智能的通信技术。</p>
 
@@ -98,24 +98,24 @@
 <p>	He served as a the publication chair in IEEE SmartGridComm 2019, TPC Chair of IEEE ISPLC 2021, Workshop Chair of IEEE ICCC 2021, Session Chair of IEEE ICC 2019, Track Chair of IEEE ICCE 2019,
 	and TPC member in many international academic conferences including IEEE ICC/Globecom, etc.
 	He serves in the Editorial Board of academic journals including Future Internet Journal, Sensors Journal, and Frontiers in Communications and Networks.
-	He is a senior member of China Institute of Communications (CIC), and a member of IEEE, ACM, and China Institute of Electronics (CIE).</p>
+	He is a Senior member of IEEE and China Institute of Communications (CIC), and a member of IEEE, ACM, and China Institute of Electronics (CIE).</p>
 <p>His current research interests  lie in visible light communication (VLC), integrated sensing and communication (ISAC), compressed sensing (CS), and AI-assisted communications.</p>
 	<p>Graduate and undergraduate students interested in related research fields are welcome to contact me via E-mail.</p>
 
 <h3>教育学术经历 Education and Academic Experiences</h3>
 	<p>2022年2月 - 至今 &nbsp;&nbsp; 厦门大学信息学院，<b>副教授</b></p>
-	<p>2018年1月 - 2022年1月 &nbsp;&nbsp; 厦门大学信息学院，<b>助理教授</b></p>
-	<p>2017年1月 - 2018年1月 &nbsp;&nbsp; 华为技术有限公司网络技术研究部，<b>高级工程师</b></p>
-	<p>2012年8月 - 2017年1月 &nbsp;&nbsp;清华大学电子工程系，攻读信息与通信工程<b>博士学位</b>，导师宋健教授</p>
+	<p>2018年2月 - 2022年1月 &nbsp;&nbsp; 厦门大学信息学院，<b>助理教授</b></p>
+	<p>2017年7月 - 2018年1月 &nbsp;&nbsp; 华为技术有限公司网络技术研究部，<b>高级工程师</b></p>
+	<p>2012年8月 - 2017年7月 &nbsp;&nbsp;清华大学电子工程系，攻读信息与通信工程<b>博士学位</b>，导师宋健教授</p>
 	<p>2010年8月 - 2011年1月 香港城市大学电子工程学系，交流访学</p>
 	<p>2008年8月 - 2012年7月 &nbsp;清华大学电子工程系，<b>本科</b></p>
 
 	<p>Feb. 2022 - Present &nbsp;&nbsp; <b>Associate Professor</b>, School of Informatics, Xiamen University</p>
-	<p>Jan. 2018 - Jan. 2022 &nbsp;&nbsp; <b>Assistant Professor</b>, School of Informatics, Xiamen University</p>
-	<p>Jan.2017-Jan. 2018 &nbsp;&nbsp; <b>Senior Engineer</b>, Research Dept. Network Technologies, Huawei Technologies Co. Ltd</p>
-	<p>Aug.2012-Jan.2017 &nbsp;&nbsp; <b>Ph.D.</b>, Department of Electronic Engineering, Tsinghua University, supervised by Prof. Jian Song</p>
-	<p>Aug.2010-Jan.2011  Visiting Student, College of Science and Engineering, City University of Hong Kong, Hong Kong</p>
-	<p>Aug.2008-Jul.2012 &nbsp; <b>Bachelor</b>, Department of Electronic Engineering, Tsinghua University</p>
+	<p>Feb. 2018 - Jan. 2022 &nbsp;&nbsp; <b>Assistant Professor</b>, School of Informatics, Xiamen University</p>
+	<p>Jul. 2017-Jan. 2018 &nbsp;&nbsp; <b>Senior Engineer</b>, Research Dept. Network Technologies, Huawei Technologies Co. Ltd</p>
+	<p>Aug. 2012-Jul. 2017 &nbsp;&nbsp; <b>Ph.D.</b>, Department of Electronic Engineering, Tsinghua University, supervised by Prof. Jian Song</p>
+	<p>Aug. 2010-Jan. 2011  Visiting Student, College of Science and Engineering, City University of Hong Kong, Hong Kong</p>
+	<p>Aug. 2008-Jul. 2012 &nbsp; <b>Bachelor</b>, Department of Electronic Engineering, Tsinghua University</p>
 
 <h3>荣誉奖励 Honors and Awards</h3>
 	<p>&bull; CCF-A类会议 ACM UbiComp CPD WS 优秀论文奖（通讯作者)，2021 </p>
@@ -168,7 +168,8 @@
 	<p>&nbsp; "Machine learning based sparse interference countermeasure for vehicle networks security," Joint Research Project with Meiya Pico, 2019.12-2020.06 (PI). </p>
 
 
-<h3>学术服务 Academia Services</h3>
+<h3>学术兼职与服务 Academia Services</h3>
+	<p>&bull; IEEE Senior Member, since Feb. 2022</p>
 	<p>&bull; Associate Editor of Frontiers in Communications and Networks, since 2020</p>
 	<p>&bull; Guest Editor of Sensors Journal, 2021-2022</p>
 	<p>&bull; Guest Editor of Future Internet Journal, 2017-2018</p>
