--- a/sicongliu.html
+++ b/sicongliu.html
@@ -98,7 +98,7 @@
 <p>	He served as a the publication chair in IEEE SmartGridComm 2019, TPC Chair of IEEE ISPLC 2021, Workshop Chair of IEEE ICCC 2021, Session Chair of IEEE ICC 2019, Track Chair of IEEE ICCE 2019,
 	and TPC member in many international academic conferences including IEEE ICC/Globecom, etc.
 	He serves in the Editorial Board of academic journals including Future Internet Journal, Sensors Journal, and Frontiers in Communications and Networks.
-	He is a Senior member of IEEE and China Institute of Communications (CIC), and a member of IEEE, ACM, and China Institute of Electronics (CIE).</p>
+	He is a Senior Member of IEEE and China Institute of Communications (CIC), and a Member of IEEE, ACM, and China Institute of Electronics (CIE).</p>
 <p>His current research interests  lie in visible light communication (VLC), integrated sensing and communication (ISAC), compressed sensing (CS), and AI-assisted communications.</p>
 	<p>Graduate and undergraduate students interested in related research fields are welcome to contact me via E-mail.</p>
 
